2004-09-16  MenTaLguY <mental@rydia.net>

	* src/render/stroke.cpp: a little more work on the stroking code

2004-09-15  Carl Hetherington <inkscape@carlh.net>

	* src/display/canvas-bpath.cpp, src/display/nr-arena-shape.cpp
	src/display/sp-ctrlline.cpp, src/libnrtype/FlowDest.cpp,
	src/libnrtype/RasterFont.cpp, src/livarot/Shape.h,
	src/livarot/ShapeRaster.cpp Remove unused parameters in
	Shape::{Begin,End}{,Quick}Raster

	* src/livarot/ShapeRaster.cpp: coding style cleanups.

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp: Factor
	out initialisePointData() and initialiseEdgeData()

2004-09-14  Carl Hetherington <inkscape@carlh.net>

	* src/display/canvas-bpath.cpp, src/display/nr-arena-shape.cpp,
	src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeMisc.cpp, src/livarot/ShapeSweep.cpp: move some
	functions out of Shape that don't need to be members.

	* src/livarot/Shape.h: reduce public: and private: sections to
	just one of each.  Coding style cleanups.  No code changes.

	* src/livarot/Shape.h: remove some unused code; const fixes.

2004-09-10  Carl Hetherington <inkscape@carlh.net>

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeDraw.cpp, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp: excise
	Shape::nbPt.

	* src/sp-offset.cpp, src/splivarot.cpp,
	src/display/nr-arena-shape.cpp, src/livarot/Shape.h: Make
	Shape::aretes private and offer a read-only accessor.

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeDraw.cpp, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp,
	src/livarot/ShapeSweepUtils.cpp: use getEdge() more and excise
	Shape::nbAr.

	* src/livarot/Shape.cpp, src/livarot/Shape.h,
	src/livarot/ShapeMisc.cpp, src/livarot/ShapeRaster.cpp,
	src/livarot/ShapeSweep.cpp, src/livarot/ShapeSweepUtils.cpp: use
	std::vector for most of the temporary arrays in Shape.
