@@ -16,13 +16,36 @@ namespace Inkscape {
 namespace Widgets {
 
 LayerSelector::LayerSelector(SPDesktop *desktop)
-: _desktop(desktop)
+: _desktop(NULL)
 {
-    g_object_ref(_desktop);
+    pack_start(_lock_button, Gtk::PACK_SHRINK);
+    pack_start(_hide_button, Gtk::PACK_SHRINK);
+    pack_start(_selector, Gtk::PACK_EXPAND_WIDGET);
+    setDesktop(desktop);
 }
 
 LayerSelector::~LayerSelector() {
-    g_object_unref(_desktop);
+    setDesktop(NULL);
+}
+
+namespace {
+
+gboolean detach(SPView *view, LayerSelector *selector) {
+    selector->setDesktop(NULL);
+    return FALSE;
+}
+
+}
+
+void LayerSelector::setDesktop(SPDesktop *desktop) {
+    if (_desktop) {
+        g_signal_handlers_disconnect_by_func(_desktop, (gpointer)detach, this);
+    }
+    if (desktop) {
+        // TODO we need a different signal for this..
+        g_signal_connect_after(desktop, "shutdown", GCallback(detach), this);
+    }
+    _desktop = desktop;
 }
 
 }
